# KimSystemAI

./: PKGBUILD  README.md  kimsystemai-0.1.0.r11.g415ba6c-1-any.pkg.tar.zst  kimsystemai-0.1.0.r12.gae7cc3a-1-any.pkg.tar.zst  kimsystemai-0.1.0.r13.g66b40e5-1-any.pkg.tar.zst  kimsystemai-bin  pyproject.toml  setup.sh
kimsystemai-repo/: FETCH_HEAD  config  packed-refs
kimsystemai-repo/objects/pack/: pack-06cdb92b5e04c6f94e61d43e672303cd01fe9e36.idx  pack-06cdb92b5e04c6f94e61d43e672303cd01fe9e36.pack  pack-06cdb92b5e04c6f94e61d43e672303cd01fe9e36.rev
kimsystemai-repo/refs/heads/: main
pkg/kimsystemai/: .BUILDINFO  .MTREE  .PKGINFO
pkgbuild/: PKGBUILD
src/kimsystemai/: __main__.py
